styles/style.css
.page {
  min-width: 1100px;
  max-width: 1600px;
  margin: 0 auto;
  font-family: "Helvetica Neue", Arial, sans-serif;
}

.header {
  height: 100vh;
  min-height: 600px;
  max-height: 756px;
  position: relative;
  display: flex;
  flex-direction: column;
  justify-content: center;
  background-color: #f2f2f2;
}

.logo {
  height: 31px;
  width: 154px;
  z-index: 1;
}

.logo_place_header {
  position: absolute;
  top: 30px;
  left: 64px;
  background-image: url("../images/logo_place_header.png");
  background-size: contain;
  background-repeat: no-repeat;
  background-clip: initial;
}

.logo_place_footer {
  display: flex;
  width: 183px;
  height: 35px;
  background-image: url("../images/logo_place_footer.png");
  background-size: contain;
  background-repeat: no-repeat;
}

.header__title {
  max-width: 730px;
  line-height: 96px;
  font-size: 102px;
  font-weight: bold;
  margin: 0 0 0 64px;
  position: relative;
  z-index: 2;
}

.header__subtitle {
  position: absolute;
  bottom: 30px;
  left: 64px;
  max-width: 380px;
  z-index: 2;
  line-height: 25px;
  font-size: 18px;
  font-weight: normal;
  margin: 0;
}

.header__link {
  color: #2f80ed;
  text-decoration: none;
  display: block;
}

.header__main-illustration {
  position: absolute;
  bottom: 0;
  right: 0;
  height: 608px;
  width: 756px;
  z-index: 1;
}

.header__square-pic {
  position: absolute;
  top: 64px;
  right: 0;
  background-color: #2f80ed;
  height: 568px;
  width: 568px;
}

.two-columns {
  margin: 100px auto;
  width: 80%;
  display: flex;
  justify-content: space-between;
}

.two-columns__brief {
  margin: 0;
  max-width: 175px;
  color: #2f80ed;
  line-height: 1.2;
  font-size: 18px;
  font-weight: normal;
}

.two-columns__main-text {
  width: 80%;
  min-width: 784px;
}

.two-columns__paragraph {
  margin: 0 auto 30px;
  line-height: 34px;
  font-size: 24px;
  font-weight: normal;
}

.two-columns__paragraph:last-of-type {
  margin-bottom: 0;
}

.two-columns__span-accent {
  line-height: 34px;
  font-size: 24px;
  font-weight: bold;
}

.digits {
  margin-top: 100px;
}

.section-title {
  width: 60%;
  margin: 0 auto 20px;
  text-align: center;
  line-height: 69px;
  font-size: 60px;
  font-weight: bold;
}

.section-title_theme_dark {
  color: white;
  padding-top: 90px;
  line-height: 69px;
  position: relative;
  z-index: 1;
}

.section-subtitle {
  width: 60%;
  margin: 0 auto 60px;
  text-align: center;
  line-height: 34px;
  font-size: 24px;
  font-weight: normal;
  z-index: 1;
}

.section-subtitle_theme_dark {
  color: white;
  margin: 20px auto 40px;
}

.table {
  display: flex;
  flex-wrap: wrap;
  width: 1100px;
  margin: auto;
  justify-content: space-between;
  padding: 0;
}

.table__cell {
  list-style: none;
  width: 250px;
  margin-bottom: 60px;
}

.table__cell_theme_dark {
  width: 200px;
  color: white;
  margin: 40px 0;
  z-index: 1;
}

.table__heading_theme_dark {
  color: white;
  line-height: 1.15;
  font-size: 24px;
  font-weight: bold;
}

.table__heading {
  line-height: 1.15;
  font-size: 24px;
  font-weight: bold;
  margin: 0;
}

.table__text {
  margin: 20px 0 0;
  line-height: 1.2;
  font-size: 18px;
  font-weight: normal;
}

.table__text_theme_dark {
  color: white;
}

.feynman {
  margin-top: 40px;
  min-height: 790px;
  background-color: #f2f2f2;
  background-image: url("../images/feynman.png");
  background-repeat: no-repeat;
  background-size: 867px 637px;
  background-position: bottom left;
  position: relative;
}

.feynman__title {
  max-width: 775px;
  text-align: center;
  margin: auto;
  padding-top: 100px;
  line-height: 1.15;
  font-size: 120px;
  font-weight: bold;
}

.feynman__subtitle {
  text-align: center;
  margin: 70px auto;
  line-height: 51px;
  font-size: 36px;
  font-weight: normal;
}

.feynman__link {
  color: #2f80ed;
  text-decoration: none;
  position: absolute;
  top: 50%;
  right: 48px;
  line-height: 51px;
  font-size: 36px;
  font-weight: normal;
}

.kaufman {
  background-color: #1f1f1f;
  position: relative;
  overflow: hidden;
  padding-bottom: 50px;
}

.kaufman__triangle {
  width: 660px;
  height: 636px;
  position: absolute;
  top: 0;
  right: -124px;
}

.footer {
  background: #1f1f1f;
  color: white;
  min-height: 350px;
  display: flex;
}

.footer__columns {
  display: flex;
  justify-content: space-between;
  width: 90%;
  padding: 60px 0 40px;
  margin: 0 auto;
}

.footer__column {
  line-height: 25px;
  font-size: 18px;
  font-weight: normal;
}

.footer__column_content_copyright {
  width: 711px;
  display: flex;
  flex-direction: column;
  justify-content: space-between;
}

.footer__author {
  margin: 18px 0;
  line-height: 25px;
  font-size: 18px;
  font-weight: normal;
}

.footer__column-heading {
  line-height: 30px;
  font-size: 18px;
  font-weight: bold;
  margin: 0 auto 20px;
}

.footer__list {
  margin: 0;
  padding: 0;
  list-style: none;
}

.footer__column-link {
  text-decoration: none;
  color: white;
  line-height: 30px;
  font-size: 18px;
  font-weight: normal;
}

.footer__social-icons {
  height: 16px;
  width: 16px;
}

